--- a/article_page.html
+++ b/article_page.html
@@ -41,7 +41,7 @@
     <link href="bootstrap-3.3.4/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="comments.css" rel="stylesheet">
+    <link href="css/comments.css" rel="stylesheet">
     <link href="jimbotron.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
