--- a/iframeWdgt.html
+++ b/iframeWdgt.html
@@ -17,7 +17,7 @@
     <link href="bootstrap-3.3.4/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="comments.css" rel="stylesheet">
+    <link href="css/comments.css" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
